--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -156,12 +156,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="165dp"
+                android:layout_marginStart="110dp"
                 android:layout_marginTop="15dp"
                 android:fontFamily="sans-serif-black"
-                android:text="Check"
+                android:text="Check Hospitals"
                 android:textColor="#32E0C4"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
