--- a/app/src/main/res/layout/custom_list.xml
+++ b/app/src/main/res/layout/custom_list.xml
@@ -8,15 +8,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/teal_700">
+        android:layout_height="90dp"
+        android:background="@drawable/cv1">
 
 
 
         <com.airbnb.lottie.LottieAnimationView
             android:layout_width="100dp"
-            android:layout_height="71dp"
+            android:layout_height="80dp"
             app:lottie_fileName="shield.json"
+            android:layout_marginTop="3dp"
             app:lottie_loop="false"
             app:lottie_autoPlay="true">
 
