--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -88,7 +88,7 @@
         android:layout_marginTop="77dp"
         android:layout_marginEnd="171dp"
         android:layout_marginBottom="419dp"
-        android:text="Book"
+        android:text="Book a normal bed "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -105,4 +105,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/book" />
+
+    <Button
+        android:id="@+id/oxybook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Book a Oxygen bed"
+        tools:layout_editor_absoluteX="166dp"
+        tools:layout_editor_absoluteY="326dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
