--- a/app/src/main/res/layout/adapter.xml
+++ b/app/src/main/res/layout/adapter.xml
@@ -147,7 +147,7 @@
                     android:layout_marginBottom="10dp"
                     android:text="18"
                     android:textColor="@color/black"
-                    android:textSize="20sp" />
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
@@ -158,7 +158,7 @@
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:lottie_fileName="blue.json"
+        app:lottie_fileName="speed.json"
         app:lottie_autoPlay="true"
         app:lottie_loop="false">
 
