--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,12 +51,11 @@
 
 
         <com.denzcoskun.imageslider.ImageSlider
+            android:id="@+id/imageslider"
             android:layout_width="match_parent"
             android:layout_height="196dp"
-            android:id="@+id/imageslider"
             app:iss_auto_cycle="true"
-            app:iss_period="2000"
-            />
+            app:iss_period="2000" />
 
 
     </LinearLayout>
